public/css/freelancer.css
/* ... */
.req-sitter {
    margin-top: 0 !important;
}
.parent{
    display:table;
}
.child{
    display:table-cell;
    vertical-align:middle;
}
#bar > svg {
    height: 140px;
    margin-top: 200px;
}
.bar-container .col-lg-12.text-center{
    height: 400px;
    background: url("../img/quiz-bg-400px.png") no-repeat center top;
 /*    -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover; */
}
.test-container {
    background: #fff;
    padding-bottom: 70px;
}
.test-container #test {
    padding: 90px 0;
}
textarea {
    resize: none;
}
.btn-sitter {
    background: #fff;
    color: #21bdd6;
    margin: 0 auto;
    display: block;
}

/* responsive */
@media (max-width: 1600px) {
    .empty-holder{
        padding-top: 100px;
    }
}

@media (max-width: 1280px){
    .empty-holder{
        padding-top: 50px;
    }
    .central-message{
        font-size: 2em;
    }
}

@media (max-width: 1200px){
    .bar-container {
        height: 390px;
    }
    #bar > svg {
        margin-top: 0;
    }
    .bar-container .col-lg-12.text-center {
        padding-top: 170px;
    }
}

@media (max-width: 768px) {
    .navbar-fixed-top {
        position: relative;
    }
    .quiz-containter {
        position: absolute;
        top: 0;
        left: 0;
    }
    .central-message {
        font-size: 26px;
        padding: 30px;
        width: 100%;
    }
    .collapse .navbar-right {
        margin-top: 0px;
    }
    .header-text p {
        top: 50px;
    }
    .empty-holder{
        padding-top: 0px;
    }
    .fb-btn{
        margin-top: 5px;
    }
    .btn-quiz{
        font-size: 1.2em;
    }

    .bar-container .col-lg-12.text-center {
        padding-top: 210px;
    }

}

@media (max-width: 480px) {
    .header-text p {
        position: relative;
        left: 0;
        top: 0;
    }
    #quiz-anchor .btn {
        white-space: inherit;
    }
    #quiz-anchor {
        width: 100%;
    }
    .empty-holder {
        padding-top: 0px;
    }
    .fb-btn {
        margin-top: 5px;
    }
    .btn-quiz {
        font-size: 1.2em;
    }
    .bar-container .col-lg-12.text-center {
        padding-top: 230px;
    }
    .central-message{
        font-size: 1.4em;
    }
    .btn-req-sitter {
        font-size: 0.5em;
    }
    h1, h2, h3, h4, h5, h6 {
        font-size: 1.2em;
    }
}

/* end valkov css 01/10/15 */

